# pip-manage

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HISTORY.md  LICENSE.txt  README.md  README.rst  pip_review.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: pylint.yaml  test.yaml
pip_manage/: __init__.py  _logging.py  _pip_interface.py  _prompting.py  pip_purge.py  pip_review.py
pip_review/: __init__.py  __main__.py  _constants.py  _main.py
tests/: fixtures.py  logging_test.py  pip_interface_test.py  pip_purge_test.py  pip_review_test.py
